Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-134726

line break is unspported

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.10.0 FF, 6.10
    • 6.8.2
    • QML: Compiler
    • None
    • 916f5b51c (dev)

      C:/work/02_tests/untitled3/build/Desktop_Qt_6_8_2_MinGW_64_bit-Debug/.qmltc/appuntitled3/main.cpp:215:5: error: 'QStringLiteral' was not declared in this scope
        215 |     QStringLiteral("Hello World
            |     ^~~~~~~~~~~~~~ 

      got above error 

      import QtQuickWindow {
          width: 640
          height: 480
          visible: true
          title: qsTr("Hello World \n")
      } 

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qtqmlteam Qt Qml Team User
            jiu shanheng jiu
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes