qmltc: Properly escape translation strings

We have QQmlJSUtils::toLiteral() for that. Extend it to handle byte
arrays in addition to strings and use it.

Fixes: QTBUG-134726
Change-Id: Ibde1f56b25794fc8c49b796303c4f39933aedb42
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>