tests/auto/qml/qmltc/tst_qmltc.h
@@ -110,4 +110,6 @@ private slots:
 
     void attachedComponentProperty();
     void attachedNamespacedProperty();
+
+    void newLineTranslation();
 };
